Fix for horizontal scroll issues.

--- a/Tessin.Bladerunner/Themes/Sass/controls/_menu.scss
+++ b/Tessin.Bladerunner/Themes/Sass/controls/_menu.scss
@@ -1,62 +1,63 @@
 .menu {
-    margin-top:-10px;
+  margin-top: -10px;
+  margin-left: -10px;
+  margin-right: -10px;
+  padding-bottom: 10px;
 }
 
 .menu-button {
-    padding: 0px;
-    margin: 0px;
-    margin-left: -10px;
-    width: 100%;
-    min-width: 200px;
-    height: 40px;
-    border: 0px;
-    border-bottom: 1px solid #ccc;
-    display: flex;
-    align-items: center;
-    background-color: transparent;
-    justify-content: left;
+  padding: 0px;
+  margin: 0px;
+  width: 100%;
+  min-width: 200px;
+  height: 40px;
+  border: 0px;
+  border-bottom: 1px solid #ccc;
+  display: flex;
+  align-items: center;
+  background-color: transparent;
+  justify-content: left;
 }
 
 .menu-button > button {
-    padding: 0px;
-    margin: 0px;
-    width: 100%;
-    height: 40px;
-    background-color: transparent;
-    color: #000000;
-    display: flex;
-    align-items: center;
-    justify-content: left;
+  padding: 0px;
+  margin: 0px;
+  width: 100%;
+  height: 40px;
+  background-color: transparent;
+  color: #000000;
+  display: flex;
+  align-items: center;
+  justify-content: left;
 }
 
 .menu-button:hover {
-    background-color: #dddddd;
+  background-color: #dddddd;
 }
 
 .menu-button > button > svg {
-    margin-left: 5px;
-    margin-right: -5px;;
-    opacity: 0.5;
+  margin-left: 5px;
+  margin-right: -5px;
+  opacity: 0.5;
 }
 
 .menu-button > button > span {
-    margin-left: 10px;
-    font-size: 1em;
-    font-family: "Roboto"
+  margin-left: 10px;
+  font-size: 1em;
+  font-family: "Roboto";
 }
 
-.menu-button--pill
-{
-    background-color: lightgray; 
-    padding: 4px 7px;
-    border-radius: 12px;
-    font-size: 0.8em;
-    margin-right: 5px;
-} 
+.menu-button--pill {
+  background-color: lightgray;
+  padding: 4px 7px;
+  border-radius: 12px;
+  font-size: 0.8em;
+  margin-right: 5px;
+}
 
 .menu-button--actions {
-    flex: none;
-    display: flex;
-    justify-content: flex-end;
-    margin-right: 5px;
+  flex: none;
+  display: flex;
+  justify-content: flex-end;
+  margin-right: 5px;
 }
